# Hydra-Engine

./: .env.example  .gitignore  DISCLAIMER.md  Dockerfile  README.md  docker-compose.expert.yml  docker-compose.lite.yml  docker-compose.pro.yml  pyproject.toml
config/: data.yaml  markets.yaml
docs/: API_REFERENCE_KO.md  QUICKSTART_KO.md
hydra/: main.py
hydra/agent/: openclaw_bridge.py  report_writer.py
hydra/api/: auth.py  backtest.py  data.py  health.py  indicators.py  markets.py  orders.py  pnl.py  positions.py  regime.py  risk.py  signals.py  strategies.py  supplemental.py  system.py
hydra/backtest/: broker.py  result.py  runner.py
hydra/cli/: app.py  kill.py  market.py  module.py  setup_wizard.py  status.py  strategy.py  trade.py
hydra/config/: keys.py  markets.py  profiles.py  settings.py  validation.py
hydra/core/: kill_switch.py  order_queue.py  pnl_tracker.py  position_tracker.py  (+2 more)
n8n/: README.md  workflow.json
scripts/: benchmark.py  dr_watchdog.py  hydra.service  start_openclaw.ps1
tests/: conftest.py  test_backfill.py  test_backtest_broker.py  test_backtest_runner.py  test_circuit_breaker.py  test_cli_help.py  test_dr.py  test_graceful_shutdown.py  test_indicator_calculator.py  test_indicator_engine.py  test_key_security.py  test_kill_switch.py  test_oom_protection.py  test_order_queue.py  test_regime_detector.py  test_regime_engine.py  test_storage.py  test_strategy_engine.py  test_strategy_signal.py  test_supplemental_events.py  test_supplemental_orderbook.py  test_supplemental_sentiment.py  test_validation.py  test_websocket_reconnect.py
(+28 files in other folders)
